validation and permanent database added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:sqlserver://localhost;databasename=employee
+spring.datasource.username=sa
+spring.datasource.password=betty
